--- a/nft-minting-app-main/public/config/config.json
+++ b/nft-minting-app-main/public/config/config.json
@@ -9,8 +9,8 @@
   "NFT_NAME": "boblintownwtf",
   "SYMBOL": "BOBLIN",
   "MAX_SUPPLY": 10000,
-  "WEI_COST": 2500000000000000,
-  "DISPLAY_COST": 0.0025,
+  "WEI_COST": 0,
+  "DISPLAY_COST": 0,
   "GAS_LIMIT": 155619,
   "MARKETPLACE": "OpenSea",
   "MARKETPLACE_LINK": "https://opensea.io/collection/boblintownwtf",
